--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
   </head>
   <body>
-      <div>Hola Mundo</div>
+      <div>Hola Mundo!</div>
 <script src="./main.js"></script>
   </body>
 </html>
